# CarbonOS

./: .dockerignore  .env.example  .gitignore  .vercelignore  Architecture_Decisions.md  Claude.md  Dockerfile  IMPLEMENTATION_PLAN.md  LangGraph_Upgrade_Assessment.docx  PLATFORM_CHAT_AGENT_PLAN.md  README.md  UI_UX_UPGRADE_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  eval.yml
api/: __init__.py  main.py
api/agent/: __init__.py  context_manager.py  graph.py  intake_forms.py  intent_router.py  state.py  system_prompt.py
api/graphs/: __init__.py  checkpointer.py  gap_analyzer_graph.py  helpers.py  supplier_copilot_graph.py
api/middleware/: auth.py
api/models/: __init__.py  schemas.py
api/routes/: advisor.py  analyzer.py  chat.py  copilot.py  gap_analyzer.py  org.py  panels.py
api/services/: __init__.py  session_store.py
api/skills/: __init__.py  analysis.py  base.py  (+4 more)
calc/: __init__.py  footprint.py
copilot/: __init__.py  draft_email.py  models.py  suppliers_list.py
db/: __init__.py  chat_store.py  client.py  copilot_store.py  database_url.py  memory_store.py  org_store.py  panel_store.py  reader.py  store.py
evals/: __init__.py  helpers.py  llm_judge.py  test_golden_files.py
factors/: __init__.py  material_mapping.py
frontend/: .env.example  DESIGN.md  package-lock.json  package.json  tailwind.config.ts
gap_analyzer/: __init__.py  executor.py  models.py
llm/: __init__.py  client.py
parsing/: __init__.py  bom_parser.py
rag/: __init__.py
scripts/: seed_demo_org.py
tests/: conftest.py  test_api.py  test_parsing.py
(+85 files in other folders)
