[project]
name = "carbon-os"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
markers = [
    "llm: live LLM evals requiring ANTHROPIC_API_KEY (deselect with '-m \"not llm\"')",
]
